<resources>
    <string name="app_name">InstagramJava</string>
    <string name="description_image">description image</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="user_name">User name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account_login">Already Have Account ? Login</string>
    <string name="you_do_not_have_an_account_register">You do not have an Account? Register</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="add_menu">add</string>
    <string name="profile">profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">post</string>
    <string name="description">Description...</string>
    <string name="search_btn">search ...</string>
    <string name="username">UserName</string>
    <string name="fullname">FullName</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="tag">#tag</string>
    <string name="_123_posts">123 posts</string>
    <string name="_123_like">123 like</string>
    <string name="post_description">post description</string>
</resources>