<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="15dp"
        android:src="@drawable/ic_more" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_action_person" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/username"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/postImage"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <ImageView
                android:id="@+id/like"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_action_like" />

            <ImageView
                android:id="@+id/comment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_toEndOf="@id/like"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_comment"
                android:layout_toRightOf="@id/like"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/save"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_save"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/no_of_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:text="@string/_123_like"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_margin="5dp"
            android:text="@string/user_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginLeft="10dp" />

        <com.hendraanggrian.appcompat.widget.SocialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/description"
            android:text="@string/post_description"
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="10dp" />


        <TextView
            android:id="@+id/no_of_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/darker_gray"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

</RelativeLayout>